package Main.UI.GameOverUI;

import Main.Asset;
import Main.Image.CellingFade;
import javafx.geometry.Pos;
import javafx.scene.image.ImageView;
import javafx.scene.layout.*;

public class GameOverBg extends StackPane{

    public GameOverBg(){

        ImageView MBg = Asset.createBackgroundView("RedStage",1,1);
        ImageView BB = Asset.createImageView("BlackBar",300,10);

        BB.fitWidthProperty().bind(widthProperty());

        MBg.setPreserveRatio(false);
        MBg.fitWidthProperty().bind(widthProperty());
        MBg.fitHeightProperty().bind(heightProperty());

        CellingFade fade = new CellingFade(200);
        StackPane.setAlignment(fade, Pos.TOP_CENTER);
        StackPane.setAlignment(BB, Pos.BOTTOM_CENTER);

        getChildren().addAll(MBg,BB,fade);
    }

}
